--- a/FreeTouch/FreeTouch.csproj
+++ b/FreeTouch/FreeTouch.csproj
@@ -75,6 +75,12 @@
     <Compile Include="ControlsLocateForm.Designer.cs">
       <DependentUpon>ControlsLocateForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MessageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MessageForm.Designer.cs">
+      <DependentUpon>MessageForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Table.cs" />
     <Compile Include="Compress.cs" />
     <Compile Include="Form1.cs">
@@ -87,7 +93,7 @@
     <Compile Include="Parse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScriptFileDialog.cs" />
+    <Compile Include="TextFileDialog.cs" />
     <Compile Include="SetPointForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +107,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MessageForm.resx">
+      <DependentUpon>MessageForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
