--- a/FreeTouch/FreeTouch.csproj
+++ b/FreeTouch/FreeTouch.csproj
@@ -52,9 +52,6 @@
     <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ICSharpCode.SharpZipLib">
-      <HintPath>bin\Debug\tools\ICSharpCode.SharpZipLib.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -75,11 +72,11 @@
     <Compile Include="ControlsLocateForm.Designer.cs">
       <DependentUpon>ControlsLocateForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MessageForm.cs">
+    <Compile Include="AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MessageForm.Designer.cs">
-      <DependentUpon>MessageForm.cs</DependentUpon>
+    <Compile Include="AboutForm.Designer.cs">
+      <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Table.cs" />
     <Compile Include="Compress.cs" />
@@ -101,15 +98,14 @@
       <DependentUpon>SetPointForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Util.cs" />
-    <Compile Include="Zip.cs" />
     <EmbeddedResource Include="ControlsLocateForm.resx">
       <DependentUpon>ControlsLocateForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MessageForm.resx">
-      <DependentUpon>MessageForm.cs</DependentUpon>
+    <EmbeddedResource Include="AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
